XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????


Heads up!
~~~~~~~~~
- Added keys() and values() methods to util.collections.Map
  (friebe)
- Set client charset in rdbms.sybase.SybaseConnection to iso_1
  (friebe, kiesel)
- Added check for correct configuration of timezone at bootstrap time
  http://news.planet-xp.net/article/389/2010/10/16/
  (kiesel)
- Removed deprecated LOGGER_FLAG_* constants
  (friebe)
- Removed deprecated HTTP_* constants
  (friebe)
- Renamed io.dba package to edu.berkeley.dba and moved it to ports
  (friebe)
- Removed deprecated classes:
  * text.String (use lang.types.String instead)
  * lang.Collection (use util.collections.IList implementation instead)
  * text.PHPParser (superseded by text.doclet package)
  * text.PHPTokenizer (-"-)
  * text.PHPSyntaxHighlighter (-"-)
  * util.ChainedException (replaced by lang.ChainedException)
  * util.DateInterval (renamed to TimeInterval to avoid name clash)
  * util.cmd.Runner (moved to xp.command.Runner)
  * xml.XML (functionality moved to xml.Tree)
  (friebe)
- Deprecated ref() and deref() core functionality
  (friebe)

RFCs
~~~~
- Implemented RFC #0052 - Make XP its own (compiled) language
  (friebe)
- Implemented RFC #0189 - Extension methods
  (friebe)
- Implemented RFC #0181 - SystemExit
  (friebe)
- Implemented RFC #0194 - Add XPClass::getDeclared*() methods
  (friebe)
- Implemented RFC #0193 - Generics optimization
  (friebe)
- Implemented RFC #0197 - Type literals in tokens
  (friebe)
- Implemented RFC #0185 - ClassFormatException for malformed annotations
  (friebe)  

Bugfixes
~~~~~~~~
- Fixed webservices.json.JsonDecoder when decoding overly long strings
  (friebe, Mihai Ghigea)
- Fixed possible fatal error in lang.ChainedException common stack trace
  elements' calculation
  (friebe)