@@ -26,3 +26,6 @@ class="net.xp_framework.unittest.logging.LogAppenderTest"
 
 [stream-appender]
 class="net.xp_framework.unittest.logging.StreamAppenderTest"
+
+[console-appender]
+class="net.xp_framework.unittest.logging.ConsoleAppenderTest"
